[gd_scene load_steps=6 format=3 uid="uid://dvpdk7pmleuk2"]

[ext_resource type="Script" path="res://database/parts/weapon.gd" id="1_aint1"]
[ext_resource type="PackedScene" uid="uid://c2dreacxcacj6" path="res://database/parts/projectiles/DefaultComplexProjectile.tscn" id="2_qf8ye"]
[ext_resource type="Texture2D" uid="uid://dhdtto7p1da0q" path="res://assets/images/mechas/shoulder_weapons/TORI-ML/TORI-ML_sub.png" id="3_ejtm6"]
[ext_resource type="Texture2D" uid="uid://brs4otjcjk2u8" path="res://assets/images/mechas/shoulder_weapons/TORI-ML/TORI-ML_main.png" id="4_hhxdq"]
[ext_resource type="Texture2D" uid="uid://nvblg20eaorr" path="res://assets/images/mechas/shoulder_weapons/TORI-ML/TORI-ML_glow.png" id="5_5js8t"]

[node name="Part" type="Node"]
script = ExtResource("1_aint1")
part_name = "Test New Weapon"
projectile = ExtResource("2_qf8ye")
fire_rate = 0.05
clip_size = 1000
stage_acceleration = Array[float]([1000.0])
stage_thrust_delay = Array[float]([2.0])

[node name="Sub" type="Sprite2D" parent="."]
texture = ExtResource("3_ejtm6")

[node name="Main" type="Sprite2D" parent="."]
texture = ExtResource("4_hhxdq")

[node name="Glow" type="Sprite2D" parent="."]
texture = ExtResource("5_5js8t")

[node name="AttachPos" type="Marker2D" parent="."]
position = Vector2(2, 12)

[node name="EjectorPos" type="Marker2D" parent="."]
position = Vector2(14, 25)

[node name="ShootingPosArray" type="Node2D" parent="."]

[node name="ShootingPos" type="Marker2D" parent="ShootingPosArray"]
position = Vector2(14, 2)
