[gd_scene load_steps=11 format=3 uid="uid://baj8rgbncidr5"]

[ext_resource type="Script" path="res://database/parts/weapon.gd" id="1_qsoae"]
[ext_resource type="PackedScene" uid="uid://d1jyd2oh71u71" path="res://database/parts/projectiles/Carnwen-02A_projectile.tscn" id="2_nw31k"]
[ext_resource type="Texture2D" uid="uid://bbflet8cb2u13" path="res://assets/images/mechas/arm_weapons/A12400w_Blade.png" id="3_cpuei"]
[ext_resource type="Texture2D" uid="uid://re6juyu7kh7e" path="res://assets/images/mechas/arm_weapons/A12400w_Main.png" id="4_qsskb"]
[ext_resource type="Script" path="res://game/mecha/MeleeHitboxes.gd" id="5_3diu6"]
[ext_resource type="PackedScene" path="res://game/mecha/Hitbox.tscn" id="6_46dl7"]


[sub_resource type="CircleShape2D" id="3"]
radius = 27.0

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sub:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sub:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "light_attack"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -15.0, -15.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sub:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -15.0, -15.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sub:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.7, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -28), Vector2(-1, -12), Vector2(0, 0)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MeleeHitboxes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-32, -126), 27.0, 1.0, 1.0, "frame_1", 0, 0.1],
"method": &"create_hitbox"
}]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("MeleeHitboxes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-50, -94), 20.0, 0.8, 0.3, "frame_1", 1, 0.1],
"method": &"create_hitbox"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("MeleeHitboxes")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(-2, -105), 20.0, 0.8, 0.3, "frame_1", 1, 0.1],
"method": &"create_hitbox"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ni8x7"]
_data = {
"RESET": SubResource("1"),
"light_attack": SubResource("2")
}

[node name="Part" type="Node"]
script = ExtResource("1_qsoae")
part_name = "Test Spear"
manufacturer_name = "Test"
tagline = "Spear"
type = "Melee"
rotation_range = 0.0
projectile = ExtResource("2_nw31k")
number_projectiles = 0
damage = 4000.0
auto_fire = false
bullet_spread = 0.0
total_ammo = 0
max_ammo = 0
clip_size = 0
reload_speed = 0.0
ammo_cost = 0
sound_max_range = 7500
sound_att = 1.75
bullet_velocity = 1000
projectile_size = 3.0
lifetime = 1.0
beam_range = 1000.0
trail_min_spawn_distance = 5.0
seek_time = 0.5
is_melee = true

[node name="Sub" type="Sprite2D" parent="."]
texture = ExtResource("3_cpuei")

[node name="Main" type="Sprite2D" parent="."]
texture = ExtResource("4_qsskb")

[node name="Glow" type="Sprite2D" parent="."]

[node name="AttachPos" type="Marker2D" parent="."]
position = Vector2(-15.7904, 15.1032)

[node name="MeleeHitboxes" type="Node2D" parent="."]
script = ExtResource("5_3diu6")

[node name="Hitbox" parent="MeleeHitboxes" instance=ExtResource("6_46dl7")]
position = Vector2(-44.6135, -152.431)

[node name="CollisionShape2D" parent="MeleeHitboxes/Hitbox" index="0"]
position = Vector2(11.7726, 29.4314)
shape = SubResource("3")

[node name="Hitbox2" parent="MeleeHitboxes" instance=ExtResource("6_46dl7")]
position = Vector2(-50, -94)

[node name="Hitbox3" parent="MeleeHitboxes" instance=ExtResource("6_46dl7")]
position = Vector2(-2, -105)

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ni8x7")
}

[editable path="MeleeHitboxes/Hitbox"]
[editable path="MeleeHitboxes/Hitbox2"]
[editable path="MeleeHitboxes/Hitbox3"]
